--- a/slides/xgboost.html
+++ b/slides/xgboost.html
@@ -4,7 +4,7 @@
     <title>XGBoost</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2021-06-11" />
+    <meta name="date" content="2021-06-12" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
@@ -19,7 +19,7 @@ class: center, middle, inverse, title-slide
 # XGBoost
 ## Teoria e prática
 ### <img src = 'https://d33wubrfki0l68.cloudfront.net/9b0699f18268059bdd2e5c21538a29eade7cbd2b/67e5c/img/logo/cursor1-5.png' width = '40%'>
-### 2021-06-11
+### 2021-06-12
 
 ---
 
@@ -181,6 +181,7 @@ modelo_xgb &lt;- boost_tree(
 &lt;img src="img/xgb_exemplo2.png" style=" display: block; margin-left: auto; margin-right: auto;width:500px"&gt;&lt;/img&gt;
 &lt;/a&gt;
 
+
 ---
 
 # XGBoost
@@ -190,6 +191,8 @@ modelo_xgb &lt;- boost_tree(
 ### Coisas boas
 
 - Bom para dados tabulares. Preparado para bases arbitrariamente grandes.
+
+- Serve para classificação, regressão, séries temporais, ranqueamento, análise de sobrevivência.
 
 - Bom para quando precisamos de boas previsões.
 
